[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/SingTile.gd" type="Script" id=1]
[ext_resource path="res://sfx/avatar.wav" type="AudioStream" id=2]
[ext_resource path="res://gfx/tiles/facetile_02.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Shake"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TileContainer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, 0.0 ]
}

[node name="SingTile" type="Node2D"]
position = Vector2( -230, -240 )
script = ExtResource( 1 )

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Shake" type="AnimationPlayer" parent="."]
anims/Shake = SubResource( 1 )

[node name="TileContainer" type="Node2D" parent="."]
position = Vector2( 230, 240 )

[node name="SingTile" type="TouchScreenButton" parent="TileContainer"]
position = Vector2( -230, -230 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )
[connection signal="finished" from="Song" to="." method="_on_Song_finished"]
[connection signal="pressed" from="TileContainer/SingTile" to="." method="_on_SingTile_pressed"]
[connection signal="released" from="TileContainer/SingTile" to="." method="_on_SingTile_released"]
